[project]
name = "brussels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "sqlalchemy>=2,<3",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.5",
    "rumdl",
    "ty>=0.0.1a27",
]

[tool.uv.build-backend]
source-exclude = ["**/__tests__/**"]

[tool.ruff]
target-version = "py312"
line-length = 120
include = ["pyproject.toml"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", # pydocstyle (i.e. ignore missing/malformed docstrings)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused (common in __init__.py to re-export symbols)
]
"**/__tests__/**/*" = [
    "ANN001",  # missing type annotation for function argument
    "ANN201",  # missing return type annotation for public function
    "ANN202",  # missing return type annotation for private function
    "B008",    # function call in argument defaults (required for FastAPI Depends)
    "F841",    # local variable assigned but never used
    "FAST002", # FastAPI dependency without Annotated
    "INP001",  # implicit namespace package (tests dir may not need __init__.py)
    "PLR0913", # too many arguments in function definition
    "PLR2004", # magic value used in comparison (fine in test cases)
    "S101",    # use of assert (tests typically use assert directly)
    "S106",    # possible hardcoded password (test secrets are fine)
    "SLF001",  # private member accessed
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: marks tests that hit the database or external services",
]
filterwarnings = [
    "error",
]

[tool.rumdl.MD013]
line_length = 120
reflow = true
code_blocks = false
tables = false
